# winda

./: .gitignore  CMakeLists.txt  main.cpp  winda.cbp  winda.cpp  winda.h
src/: CMakeLists.txt  funkcje.cpp  funkcje.h  kontroler.cpp  kontroler.h  main.cpp  winda.cpp  winda.h
winda/: winda.sln  winda.vcxproj  winda.vcxproj.filters
